--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,11 @@
-useDynLib("TDboost")
-import("tweedie")
-exportPattern(".")
+# Export all names that don't start with "."
+exportPattern("^[^\\.]")
+
+useDynLib(TDboost)
+
+# ns from splines is used in one of the examples
+importFrom(splines)
+
+# xyplot is used, which means several functions internal
+# to lattice will also be used. Import the lot.
+import(lattice)
