--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: TDboost
 Title: A Boosted Tweedie Compound Poisson Model
-Version: 1.1
-Date: 2015-03-14
-Author: Yi Yang <yiyang@umn.edu>, Wei Qian <weiqian@stat.umn.edu>, Hui Zou <hzou@stat.umn.edu>
-Maintainer: Yi Yang <yiyang@umn.edu>
+Version: 1.2
+Date: 2016-03-29
+Author: Yi Yang <yi.yang6@mcgill.ca>, Wei Qian <wxqsma@rit.edu>, Hui Zou <hzou@stat.umn.edu>
+Maintainer: Yi Yang <yi.yang6@mcgill.ca>
 Depends: R (>= 2.12.0), lattice
 Description: A boosted Tweedie compound Poisson model using the gradient boosting. It is capable of fitting a flexible nonlinear Tweedie compound Poisson model (or a gamma model) and capturing interactions among predictors. 
 LazyData: yes
 License: GPL-3
-Packaged: 2015-03-14 07:53:12 UTC; yiyang
+Packaged: 2016-03-29 07:53:12 UTC; yiyang
 NeedsCompilation: yes
-Date/Publication: 2015-03-14 08:00:50
+Date/Publication: 2016-03-29 08:00:50
