1. correct a namespace issue

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,16 @@ useDynLib(TDboost)
 # to lattice will also be used. Import the lot.
 import(lattice)
 
+
+importFrom("grDevices", "rainbow")
+importFrom("graphics", "abline", "axis", "barplot", "lines", "mtext",
+          "par", "plot")
+importFrom("stats", "delete.response", "loess", "model.extract",
+          "model.frame", "model.offset", "model.response",
+          "model.weights", "na.pass", "quantile", "reformulate",
+          "terms", "weighted.mean")
+			  
+			  
 S3method("summary","TDboost")
 S3method("plot","TDboost")
 S3method("predict","TDboost")
