--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,21 @@
 Package: TDboost
 Title: A Boosted Tweedie Compound Poisson Model
-Version: 1.2
-Date: 2016-03-29
-Author: Yi Yang <yi.yang6@mcgill.ca>, Wei Qian <wxqsma@rit.edu>, Hui Zou <hzou@stat.umn.edu>
-Maintainer: Yi Yang <yi.yang6@mcgill.ca>
+Version: 1.3
+Date: 2022-08-14
+Authors@R: c(
+  person("Yi", "Yang", email = "yi.yang6@mcgill.ca",
+  role = c("aut", "cre"), comment = "http://www.math.mcgill.ca/yyang/"),
+  person("Hui", "Zou", email = "hzou@stat.umn.edu",
+  role = c("aut"), comment = "http://users.stat.umn.edu/~zouxx019/"),
+  person("Wei", "Qian", email = "weiqian@udel.edu",
+  role = c("aut"), comment = "https://sites.google.com/a/udel.edu/weiqian/"),
+  person("Greg", "Ridgeway", email = "gregridgeway@gmail.com",
+  role = c("aut","cph"))
+  )
 Depends: R (>= 2.12.0), lattice
-Description: A boosted Tweedie compound Poisson model using the gradient boosting. It is capable of fitting a flexible nonlinear Tweedie compound Poisson model (or a gamma model) and capturing interactions among predictors. 
+Description: A boosted Tweedie compound Poisson model using the gradient boosting. It is capable of fitting a flexible nonlinear Tweedie compound Poisson model (or a gamma model) and capturing interactions among predictors. Based on the gbm package originally developed by Greg Ridgeway.
 LazyData: yes
 License: GPL-3
-Packaged: 2016-03-29 07:53:12 UTC; yiyang
+Packaged: 2022-08-14 07:53:12 UTC; yiyang
 NeedsCompilation: yes
-Date/Publication: 2016-03-29 08:00:50
+Date/Publication: 2022-08-14 08:00:50
